# gradient-descent-cpp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindGDCPP.cmake  FindGDCpp.cmake
dep/: CMakeLists.txt
examples/: CMakeLists.txt  ackley.cpp  paraboloid.cpp
include/: gdcpp.h  gradient_descent_cpp.h
include/gdc/: finite_differences.h  gradient_descent.h  gradient_descent_base.h
test/: CMakeLists.txt  gdcpp.cpp  gradient_descent.cpp  main.cpp
test/assert/: eigen_require.h
